--- a/indexRobot.html
+++ b/indexRobot.html
@@ -30,6 +30,10 @@
         transform: scale(5, 2);
         z-index: 300;
       }
+
+      .hide {
+        opacity: 0;
+      }
     </style>
   </head>
   <body></body>
